.cicd/ingress.yaml
# Create a ingress controller
# L7 load balancer
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: prod-ingress
  namespace: cart-dev-ns
  annotations:
    networking.gke.io/managed-certificates: "sujanreddy"  
spec:
  rules:
  - host: i27academy.in 
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: i27-clothing-dev
            port:
              number: 80
  - host: prod.i27academy.in 
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: i27-clothing-dev
            port:
              number: 80
