.cicd/k8s_dev.yaml
# Deployment for clothing node app
apiVersion: apps/v1
kind: Deployment
metadata:
  name: i27-clothing-dev
  labels:
    app: i27-clothing-dev
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: i27-clothing-dev
  template:
    metadata:
      labels:
        app: i27-clothing-dev
    spec:
      containers:
      - name: i27-clothing-dev
        image: DIT # Replace with your docker image name 
        ports:
        - containerPort: 3000
       # The below command and args OVERRIDE Dockerfile CMD. So Kubernetes starts container as: /entrypoint.sh dev
        command: ["/entrypoint.sh"] #executable to run
        args: ["dev"] # # Passed as argument to executable or Dockerfile CMD
        # Environment variable passed inside the container
        # Accessible in application/scripts as ENVIRONMENT=dev then script(entrypoint.sh) should be ENVIRONMENT="${ENVIRONMENT:-dev}"
        env: # environment variables inside container
        - name: ENVIRONMENT
          value: "dev"
---
# Service for clothing node app
apiVersion: v1
kind: Service
metadata:
  name: i27-clothing-dev
  labels:
    app: i27-clothing-dev
spec:
  selector:
    app: i27-clothing-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  # type: NodePort
---
# Create a ingress controller
# L7 load balancer
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: prod-ingress
  namespace: cart-dev-ns
  annotations:
    networking.gke.io/managed-certificates: "sujanreddy"
spec:
  rules:
  - host: sujanreddy.in 
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: i27-clothing-dev
            port:
              number: 80
  - host: prod.sujanreddy.in 
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: i27-clothing-dev
            port:
              number: 80
